# webgpu-groth16

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  rust-toolchain.toml  rustfmt.toml  signature
.github/workflows/: ci.yml
benches/: groth16_bench.rs
examples/: profile.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bucket_sorting.rs  fuzz_fq_13bit_roundtrip.rs  fuzz_glv_decompose.rs  fuzz_negate_g1_bytes.rs  fuzz_serialize_g1_roundtrip.rs  fuzz_u128_windows.rs
llm/: FINDINGS.md  PLAN.md  TODO.md
scripts/: compute_13bit_constants.py  gen_fp_unrolled.py  verify_cios.py
src/: bucket.rs  glv.rs  gpu.rs  lib.rs  prover.rs  qap.rs  traits.rs
src/bucket/: mod.rs  tests.rs
src/glv/: bls12_381.rs
src/gpu/: buffers.rs  curve.rs  curve_tests.rs  h_poly.rs  msm.rs  ntt.rs  tests.rs
src/gpu/curve/: bls12_381.rs
src/prover/: constraint_system.rs  density_masks.rs  gpu_key.rs  h_poly.rs  msm.rs  prepared_key.rs  tests.rs
src/shader/bls12_381/: curve.wgsl  curve_g1.wgsl  curve_g2.wgsl  fp.wgsl  fr.wgsl  msm.wgsl  msm_g1_agg.wgsl  msm_g1_subsum.wgsl  msm_g2_agg.wgsl  msm_g2_subsum.wgsl  msm_test_debug_g1.wgsl  msm_test_debug_g2.wgsl  ntt.wgsl  ntt_fused.wgsl  poly_ops.wgsl
