[package]
name = "webgpu-groth16"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "28.0.0", features = ["webgl"] }
wasm-bindgen = "0.2.113"
blstrs = "0.7.1"
ff = "0.13.1"
group = "0.13"
subtle = "2.5"
futures = "0.3.32"
anyhow = "1.0.102"
rand_core = "0.6.4"
bellman = "0.14"

[dev-dependencies]
rand = "0.8"
