[package]
name = "webgpu-groth16"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Groth16 GPU prover aimed primarily at browser environments"
repository = "https://github.com/heliaxdev/webgpu-groth16"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["bellman-provider-nam-bellperson"]
bellman-provider-bellman = ["dep:bellman"]
bellman-provider-nam-bellperson = ["dep:nam-bellperson"]
timing = []
profiling = ["dep:wgpu-profiler"]

[dependencies]
anyhow = "1.0.102"
bellman = { version = "0.14.0", optional = true }
blstrs = { package = "nam-blstrs", version = "0.7.1-nam.0" }
bytemuck = "1.25.0"
ff = "0.13.1"
futures = "0.3.32"
group = "0.13"
nam-bellperson = { version = "0.26.6-nam.1", optional = true }
pairing = "0.23.0"
rand_core = "0.6.4"
subtle = "2.5"
wasm-bindgen = "0.2.113"
wgpu = "28.0.0"
wgpu-profiler = { version = "0.26", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
masp_primitives = "3.0.9"
masp_proofs = { version = "3.0.9", default-features = false }
rand_core = { version = "0.6.4", features = ["getrandom"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "groth16_bench"
harness = false
